Fix homepage alignment

--- a/css/default.css
+++ b/css/default.css
@@ -59,6 +59,7 @@ body,
     padding-top: 16px;
     padding-bottom: 16px;
     display: flex;
+    justify-content: center;
     flex-wrap: wrap-reverse;
     gap: 16px;
 }
